--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
   },
   "main": "dist/index.min.js",
   "module": "dist/index.es.js",
+  "types": "dist/index.d.ts",
   "source": "src/index.js",
   "files": [
-    "dist",
-    "README.md"
+    "dist"
   ],
   "engines": {
     "node": ">=10"
@@ -31,22 +31,23 @@
   "peerDependencies": {
     "react": "^16.0.0"
   },
-  "dependencies": {
-    "prop-types": "^15.7.2"
-  },
   "devDependencies": {
-    "@babel/core": "^7.12.13",
-    "@babel/preset-env": "^7.12.13",
-    "@babel/preset-react": "^7.12.13",
+    "@types/react": "^17.0.2",
+    "@types/react-dom": "^17.0.1",
+    "@typescript-eslint/eslint-plugin": "^4.15.1",
+    "@typescript-eslint/parser": "^4.15.1",
     "babel-eslint": "^10.0.3",
-    "eslint": "^7.19.0",
-    "eslint-config-airbnb": "^18.2.1",
+    "eslint": "^7.20.0",
+    "eslint-config-airbnb-typescript": "^12.3.1",
+    "eslint-config-prettier": "^7.2.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^1.7.0",
     "less": "^4.1.1",
     "postcss": "^8.2.6",
+    "prettier": "^2.2.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "^4.0.2",
@@ -57,7 +58,9 @@
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-postcss": "^4.0.0",
     "rollup-plugin-terser": "^7.0.2",
-    "rollup-plugin-url": "^3.0.1"
+    "rollup-plugin-typescript2": "^0.30.0",
+    "rollup-plugin-url": "^3.0.1",
+    "typescript": "^4.1.5"
   },
   "eslintConfig": {
     "extends": "react-app"
