--- a/example/package.json
+++ b/example/package.json
@@ -3,10 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/node": "file:../node_modules/@types/node",
+    "@types/react": "file:../node_modules/@types/react",
+    "@types/react-dom": "file:../node_modules/@types/react-dom",
     "react": "file:../node_modules/react",
     "react-dom": "file:../node_modules/react-dom",
     "react-scripts": "file:../node_modules/react-scripts",
-    "react-interval-calendar": "file:.."
+    "react-interval-calendar": "file:..",
+    "typescript": "file:../node_modules/typescript"
   },
   "scripts": {
     "start": "react-scripts start",
