--- a/package.json
+++ b/package.json
@@ -24,27 +24,33 @@
     "build": "npm run clean:dist && npm run prepare:build",
     "clean:dist": "rm -rf dist",
     "prepare:build": "rollup -c",
-    "jest": "jest",
-    "lint": "eslint sample/ src/ test/ --ext .jsx,.js",
+    "jest": "jest --coverage",
+    "jest:watch": "jest --watch --coverage",
+    "lint": "eslint --ext .jsx,.js,.tsx,.ts src/",
     "test": "npm run lint && npm run jest"
   },
   "peerDependencies": {
     "react": "^16.0.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.11.9",
+    "@testing-library/react": "^11.2.5",
+    "@types/jest": "^26.0.20",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
-    "@typescript-eslint/eslint-plugin": "^4.15.1",
-    "@typescript-eslint/parser": "^4.15.1",
-    "babel-eslint": "^10.0.3",
+    "@typescript-eslint/eslint-plugin": "^4.15.2",
+    "@typescript-eslint/parser": "^4.15.2",
     "eslint": "^7.20.0",
+    "eslint-config-airbnb": "^18.2.1",
     "eslint-config-airbnb-typescript": "^12.3.1",
-    "eslint-config-prettier": "^7.2.0",
+    "eslint-config-prettier": "^8.0.0",
     "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jest": "^24.1.5",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^1.7.0",
+    "jest": "^26.6.3",
     "less": "^4.1.1",
     "postcss": "^8.2.6",
     "prettier": "^2.2.1",
@@ -60,9 +66,21 @@
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "^0.30.0",
     "rollup-plugin-url": "^3.0.1",
+    "ts-jest": "^26.5.1",
     "typescript": "^4.1.5"
   },
-  "eslintConfig": {
-    "extends": "react-app"
+  "jest": {
+    "coverageReporters": [
+      "text"
+    ],
+    "transform": {
+      ".(ts|tsx)": "ts-jest"
+    },
+    "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(ts|tsx|js)$",
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js"
+    ]
   }
 }
