--- a/example/package.json
+++ b/example/package.json
@@ -8,9 +8,9 @@
     "@types/react-dom": "file:../node_modules/@types/react-dom",
     "react": "file:../node_modules/react",
     "react-dom": "file:../node_modules/react-dom",
-    "react-scripts": "file:../node_modules/react-scripts",
     "react-interval-calendar": "file:..",
-    "typescript": "file:../node_modules/typescript"
+    "react-scripts": "^4.0.3",
+    "typescript": "^4.2.3"
   },
   "scripts": {
     "start": "react-scripts start",
