--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,6 +28,6 @@
     "noFallthroughCasesInSwitch": true,
     "removeComments": true,
   },
-  "include": ["src"],
+  "include": ["src", "jest.config.ts"],
   "exclude": ["node_modules", "dist", "example", "rollup.config.js"]
 }
