--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   },
   "main": "dist/index.min.js",
   "module": "dist/index.es.js",
-  "types": "dist/index.d.ts",
+  "types": "dist/src/index.d.ts",
   "source": "src/index.js",
   "files": [
     "dist"
