--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
     "test": "npm run lint && npm run jest"
   },
   "peerDependencies": {
-    "react": "^16.8.0"
+    "react": ">=16.8.0",
+    "react-dom": ">=16.8.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.11.10",
