--- a/package.json
+++ b/package.json
@@ -112,19 +112,19 @@
       "js"
     ],
     "setupFilesAfterEnv": [
-      "<rootDir>/src/__tests__/setupTests.ts"
+      "<rootDir>/__tests__/setupTests.ts"
     ],
     "testPathIgnorePatterns": [
       "<rootDir>/node_modules/",
       "<rootDir>/dist/",
-      "<rootDir>/src/__tests__/testUtils.ts",
-      "<rootDir>/src/__tests__/setupTests.ts"
+      "<rootDir>/__tests__/testUtils.ts",
+      "<rootDir>/__tests__/setupTests.ts"
     ],
     "coveragePathIgnorePatterns": [
       "<rootDir>/node_modules/",
       "<rootDir>/dist/",
-      "<rootDir>/src/__tests__/testUtils.ts",
-      "<rootDir>/src/__tests__/setupTests.ts"
+      "<rootDir>/__tests__/testUtils.ts",
+      "<rootDir>/__tests__/setupTests.ts"
     ]
   }
 }
