--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,5 +28,5 @@
     "removeComments": true
   },
   "include": ["src"],
-  "exclude": ["node_modules", "dist", "example", "rollup.config.js"]
+  "exclude": ["node_modules", "dist", "example", "rollup.config.mjs"]
 }
