--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
     "outDir": "dist",
     "module": "ESNext",
     "target": "es2020",
-    "lib": ["es6", "dom", "es2016", "es2017", "es2019"],
+    "lib": ["es6", "dom", "es2016", "es2017", "es2019", "es2020"],
     "sourceMap": true,
     "allowJs": false,
     "jsx": "react",
@@ -28,5 +28,5 @@
     "removeComments": true
   },
   "include": ["src"],
-  "exclude": ["node_modules", "dist", "example", "rollup.config.mjs"]
+  "exclude": ["dist", "example", "node_modules", "rollup.config.mjs"]
 }
